@@ -1,3 +1,8 @@
+2007-03-04 20:48  nick
+	
+	* panel/panel-dialogs.c: Remove the position combobox, this is not working
+	  and thus only confusing for other people ^_^.
+
 2007-03-04 20:32  nick
 
 	* libxfce4panel/xfce-panel-macros.{c,h}: Add a macro for
